# engine-core

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  HOW_IT_WORKS.md  README.md  README_EOA.md  SOLANA_PROGRAM_ENDPOINT_SPEC.md  cargo.toml  docker-compose.monitoring.yml  justfile
.config/: nextest.toml
.github/workflows/: ci-executors.yaml  ci-twmq.yaml  coverage-executors.yaml  coverage-twmq.yaml  docker-nightly.yaml  docker-release.yaml
aa-core/: Cargo.toml
aa-core/src/: lib.rs  signer.rs
aa-core/src/account_factory/: chained.rs  default.rs  mod.rs  utils.rs
aa-core/src/smart_account/: mod.rs
aa-core/src/userop/: builder.rs  deployment.rs  mod.rs
aa-types/: Cargo.toml
aa-types/src/: lib.rs  userop.rs
core/: Cargo.toml
core/src/: chain.rs  constants.rs  credentials.rs  defs.rs  error.rs  lib.rs  signer.rs  transaction.rs  userop.rs
core/src/execution_options/: aa.rs  auto.rs  eip7702.rs  eoa.rs  mod.rs  solana.rs
core/src/rpc_clients/: bundler.rs  empty_params.rs  mod.rs  paymaster.rs  transport.rs
coverage/: cobertura.xml  tarpaulin-report.html
eip7702-core/: Cargo.toml
eip7702-core/src/: constants.rs  delegated_account.rs  lib.rs  transaction.rs
eip7702-core/tests/: integration_tests.rs
eip7702-core/tests/bytecode/: erc20.hex  erc20.sol
executors/: Cargo.toml  GITHUB_ACTIONS_SUMMARY.md  PATTERN_COMPLIANCE_SUMMARY.md  TESTING_SUMMARY.md  TEST_COVERAGE_REPORT.md
executors/src/: kafka_integration.rs  lib.rs  metrics.rs  transaction_registry.rs
executors/src/eip7702_executor/: confirm.rs  delegation_cache.rs  mod.rs  send.rs
executors/src/eoa/: authorization_cache.rs  confirm.rs  eoa_confirmation_worker.rs  error_classifier.rs  events.rs  mod.rs  nonce_manager.rs  send.rs  store.rs  transaction_store.rs  worker.rs
executors/src/eoa/store/: atomic.rs  borrowed.rs  error.rs  hydrate.rs  mod.rs  pending.rs  submitted.rs
executors/src/eoa/worker/: confirm.rs  error.rs  mod.rs  send.rs  transaction.rs
executors/src/external_bundler/: confirm.rs  deployment.rs  mod.rs  send.rs
executors/src/solana_executor/: mod.rs  rpc_cache.rs  storage.rs  worker.rs
executors/src/webhook/: envelope.rs  mod.rs
executors/tests/: deployment_test.rs  external_bundler_test.rs  fixtures.rs  transaction_registry_test.rs  webhook_envelope_test.rs  webhook_test.rs
integration-tests/: Cargo.toml  README.md
integration-tests/configuration/: test_base.yaml
integration-tests/src/: lib.rs
integration-tests/tests/: setup.rs  sign_solana_transaction.rs
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: thirdweb-engine.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: .env.example  .gitignore  auto-reset.ts  cleanup-failed-pending-txs.ts  cleanup-webhook-meta.ts  package.json  simple-redis-cleanup.ts
scripts/benchmarks/: README.md  eoa.ts
scripts/redis-cleanup/: index.tsx
server/: .gitignore  Cargo.toml  DOCKER.md  Dockerfile  HTTP2_SETUP.md  bacon.toml  server.long-type-10751896094069705373.txt
server/configuration/: server_base.yaml  server_development.yaml  server_production.yaml  server_tls_example.yaml
server/res/: scalar.html
server/src/: chains.rs  config.rs  lib.rs  main.rs
server/src/execution_router/: mod.rs
server/src/http/: dyn_contract.rs  error.rs  extractors.rs  mod.rs  server.rs  types.rs
server/src/http/routes/: contract_encode.rs  contract_read.rs  contract_write.rs  create_userop.rs  encode_method.rs  mod.rs  sign_message.rs  sign_solana_transaction.rs  sign_typed_data.rs  smart_account.rs  solana_program.rs  solana_transaction.rs  transaction.rs  transaction_write.rs  working_read_contract.rs
server/src/http/routes/admin/: eoa_diagnostics.rs  metrics.rs  mod.rs  queue.rs
server/src/kafka/: mod.rs
server/src/queue/: manager.rs
solana-core/: Cargo.toml
solana-core/src/: account_resolver.rs  builtin_programs.rs  error.rs  idl_cache.rs  idl_types.rs  instruction_encoder.rs  lib.rs  program.rs  transaction.rs
solana-core/tests/: integration_tests.rs  jupiter_idl.json  pda_derivation_tests.rs  program_interaction_tests.rs
thirdweb-core/: Cargo.toml
thirdweb-core/src/: auth.rs  error.rs  lib.rs
thirdweb-core/src/abi/: mod.rs
thirdweb-core/src/iaw/: mod.rs  userop.rs
twmq/: Cargo.toml
twmq/benches/: throughput.rs
twmq/src/: error.rs  hooks.rs  job.rs  lib.rs  multilane.rs  queue.rs  shutdown.rs
twmq/tests/: basic.rs  basic_hook.rs  delay.rs  fixtures.rs  idempotency_modes.rs  lease_expiry.rs  multilane_batch_pop.rs  nack.rs  prune_race_condition.rs  prune_race_random_ids.rs
types-core/: Cargo.toml
types-core/src/: lib.rs
