[workspace]
members = [
  "aa-types",
  "aa-core",
  "core",
  "eip7702-core",
  "executors",
  "server",
  "thirdweb-core",
  "twmq",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1.0.23" }
vault-types = { version = "0.1.0", git = "ssh://git@github.com/thirdweb-dev/vault.git", branch = "pb/update-alloy" }
vault-sdk = { version = "0.1.0", git = "ssh://git@github.com/thirdweb-dev/vault.git", branch = "pb/update-alloy" }
