[workspace]
members = [
  "aa-types",
  "aa-core",
  "core",
  "eip7702-core",
  "executors",
  "server",
  "solana-core",
  "thirdweb-core",
  "twmq",
]
resolver = "2"

[workspace.dependencies]
# Alloy and related
alloy = { version = "1.0.36" }
alloy-signer-aws = { version = "1.0.23" }

# Vault
vault-types = { version = "0.1.0", git = "ssh://git@github.com/thirdweb-dev/vault.git", branch = "main" }
vault-sdk = { version = "0.1.0", git = "ssh://git@github.com/thirdweb-dev/vault.git", branch = "main" }

# Solana
solana-sdk = "3.0"
solana-client = "3.0"
solana-transaction-status = "3.0"
solana-connection-cache = "3.0"
solana-commitment-config = "3.0"
solana-compute-budget-interface = "3.0"
spl-memo-interface = "2.0"

# AWS
aws-config = "1.8.2"
aws-sdk-kms = "1.79.0"
aws-credential-types = "1.2.4"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
serde-bool = "0.1.3"
serde_repr = "0.1.20"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }

# Async runtime
tokio = { version = "1.45.0" }
futures = "0.3.31"

# API documentation
utoipa = { version = "5.4.0" }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0" }
schemars = "0.8.22"
aide = { version = "0.14.2" }

# Web framework
axum = { version = "0.8.4" }
tower = "0.5.2"
tower-http = { version = "0.6.2" }

# Caching
moka = { version = "0.12.10", features = ["future"] }

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.1"
chrono = "0.4.41"
base64 = "0.22.1"
hex = "0.4.3"
url = "2.5.4"
nanoid = "0.4.0"

# HTTP client
reqwest = "0.12.18"

# Cryptography
hmac = "0.12.1"
sha2 = "0.10.9"

# Metrics
prometheus = "0.13.4"
lazy_static = "1.5.0"

# Configuration
config = "0.15.11"
aws-arn = "0.3.1"

# Redis
redis = { version = "0.31.0", features = ["tokio-comp", "connection-manager"] }

# Dev dependencies
criterion = { version = "0.6", features = ["html_reports", "async_tokio"] }