[package]
name = "engine-aa-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
engine-aa-types = { path = "../aa-types" }
engine-core = { path = "../core" }
vault-types = { workspace = true }
vault-sdk = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
