[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.8", features = ["serde", "json-rpc"] }
engine-aa-types = { path = "../aa-types" }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
vault-types = { version = "0.1.0", git = "ssh://git@github.com/thirdweb-dev/vault.git", branch = "main" }
vault-sdk = { version = "0.1.0", git = "ssh://git@github.com/thirdweb-dev/vault.git", branch = "main" }
tower = "0.5.2"
tracing = "0.1.41"
async-nats = "0.40.0"
twmq = { version = "0.1.0", path = "../twmq" }
thirdweb-core = { version = "0.1.0", path = "../thirdweb-core" }
uuid = { version = "1.17.0", features = ["v4"] }
utoipa = { version = "5.4.0", features = ["preserve_order"] }
serde_with = "3.13.0"
