[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["serde", "json-rpc"] }
engine-aa-types = { path = "../aa-types" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
vault-types = { workspace = true }
vault-sdk = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
twmq = { version = "0.1.0", path = "../twmq" }
thirdweb-core = { version = "0.1.0", path = "../thirdweb-core" }
uuid = { workspace = true }
utoipa = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }
alloy-signer-aws = { workspace = true, features = ["eip712"] }
aws-config = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-credential-types = { workspace = true }
moka = { workspace = true }
solana-sdk = { workspace = true }
solana-commitment-config = { workspace = true }
solana-client = { workspace = true }
engine-solana-core = { version = "0.1.0", path = "../solana-core" }
