[package]
name = "engine-eip7702-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["serde"] }
tokio = "1.44.2"
engine-core = { path = "../core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
rand = "0.9"
thiserror = "2.0"
serde_repr = "0.1.20"

[dev-dependencies]
alloy = { workspace = true, features = [
  "sol-types",
  "providers",
  "transports",
  "rpc-types",
  "consensus",
  "network",
  "signers",
  "node-bindings",
  "serde",
  "contract",
  "eip712",
] }
vault-types = { workspace = true }
