[package]
name = "engine-eip7702-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
engine-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde_repr = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = [
  "sol-types",
  "providers",
  "transports",
  "rpc-types",
  "consensus",
  "network",
  "signers",
  "node-bindings",
  "serde",
  "contract",
  "eip712",
] }
vault-types = { workspace = true }
