[package]
name = "engine-executors"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
alloy = { version = "1.0.8", features = ["serde"] }
hmac = "0.12.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tracing = "0.1.41"
twmq = { version = "0.1.0", path = "../twmq" }
engine-aa-types = { version = "0.1.0", path = "../aa-types" }
engine-core = { version = "0.1.0", path = "../core" }
engine-aa-core = { version = "0.1.0", path = "../aa-core" }
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
mockall = "0.14.0"
wiremock = "0.6.2"
redis = { version = "0.27.5", features = ["tokio-comp"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["redis"] }
tracing-test = "0.2.5"
