[package]
name = "engine-executors"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = { workspace = true }
alloy = { workspace = true, features = ["serde"] }
bincode = { workspace = true, features = ["serde"] }
thirdweb-core = { version = "0.1.0", path = "../thirdweb-core" }
hmac = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twmq = { version = "0.1.0", path = "../twmq" }
engine-aa-types = { version = "0.1.0", path = "../aa-types" }
engine-eip7702-core = { version = "0.1.0", path = "../eip7702-core" }
engine-core = { version = "0.1.0", path = "../core" }
engine-aa-core = { version = "0.1.0", path = "../aa-core" }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
moka = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
engine-solana-core = { version = "0.1.0", path = "../solana-core" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-commitment-config = { workspace = true }
spl-memo-interface = { workspace = true }
base64 = { workspace = true }