[package]
name = "engine-integration-tests"
version = "0.1.0"
edition = "2024"

[lib]
test = false    # Don't build unit test harness for src/lib.rs etc.
doctest = false # Don't run doc tests for the library

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
moka = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
prometheus = { workspace = true }
config = { workspace = true }

# Solana dependencies
solana-sdk = { workspace = true, features = ["full"] }
solana-client = { workspace = true }
solana-system-interface = { version = "2.0", features = ["bincode"] }
spl-token-2022-interface = "2.1"

# Vault/Engine dependencies
vault-sdk = { workspace = true }
vault-types = { workspace = true }
engine-solana-core = { path = "../solana-core" }
engine-core = { path = "../core" }
engine-executors = { path = "../executors" }
thirdweb-core = { path = "../thirdweb-core" }

# Testing utilities
once_cell = "1.20"

[dev-dependencies]
thirdweb-engine = { path = "../server" }
twmq = { path = "../twmq" }
rand = { workspace = true }
