[package]
name = "thirdweb-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["serde"] }
axum = { workspace = true, features = ["macros"] }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vault-sdk = { workspace = true }
vault-types = { workspace = true }
engine-core = { path = "../core" }
engine-aa-core = { path = "../aa-core" }
engine-solana-core = { path = "../solana-core" }
engine-executors = { path = "../executors" }
twmq = { path = "../twmq" }
thirdweb-core = { path = "../thirdweb-core" }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
rand = { workspace = true }
futures = { workspace = true }
serde-bool = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
aide = { workspace = true, features = [
    "axum",
    "axum-json",
    "macros",
    "scalar",
] }
schemars = { workspace = true }
utoipa = { workspace = true, features = [
    "macros",
    "chrono",
    "uuid",
    "axum_extras",
    "preserve_order",
] }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true, features = ["axum"] }
serde_with = { workspace = true }
aws-arn = { workspace = true }
moka = { workspace = true }
engine-eip7702-core = { path = "../eip7702-core" }
prometheus = { workspace = true }
thiserror = { workspace = true }