[package]
name = "thirdweb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = [
  "json-abi",
  "consensus",
  "dyn-abi",
  "eips",
  "eip712",
] }
engine-aa-types = { path = "../aa-types" }
moka = { version = "0.12.10", features = ["future"] }
reqwest = "0.12.18"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"
utoipa = "5.4.0"
