[package]
name = "thirdweb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = [
  "json-abi",
  "consensus",
  "dyn-abi",
  "eips",
  "eip712",
] }
engine-aa-types = { path = "../aa-types" }
moka = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
