[package]
name = "twmq"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.31.0", features = ["tokio-comp", "connection-manager"] }
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
