[package]
name = "twmq"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { workspace = true }
utoipa = { workspace = true }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "throughput"
harness = false
